--- a/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
+++ b/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
@@ -79,6 +79,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SubscribersForm.resx">
+      <DependentUpon>SubscribersForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
