--- a/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
+++ b/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LimitsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LimitsForm.Designer.cs">
+      <DependentUpon>LimitsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +58,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubscribersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SubscribersForm.Designer.cs">
+      <DependentUpon>SubscribersForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="LimitsForm.resx">
+      <DependentUpon>LimitsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
