--- a/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
+++ b/CabinTempArduino/CabinTempArduino/CabinTempArduino.csproj
@@ -85,6 +85,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SettingsForm.resx">
+      <DependentUpon>SettingsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SubscribersForm.resx">
       <DependentUpon>SubscribersForm.cs</DependentUpon>
     </EmbeddedResource>
