--- a/PC/CabinTempArduino/CabinTempArduino.csproj
+++ b/PC/CabinTempArduino/CabinTempArduino.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
+    <Compile Include="E-post.cs" />
     <Compile Include="frmChart.cs">
       <SubType>Form</SubType>
     </Compile>
