--- a/PC/CabinTempArduino/CabinTempArduino.csproj
+++ b/PC/CabinTempArduino/CabinTempArduino.csproj
@@ -64,6 +64,7 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FurnaceController.cs" />
     <Compile Include="OLEdb.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
