--- a/Nettside/WebApplication6.csproj
+++ b/Nettside/WebApplication6.csproj
@@ -169,10 +169,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\DataModels.cs" />
-    <Compile Include="Models\Database.cs" />
+    <Compile Include="Classes\Database.cs" />
+    <Compile Include="Models\HomeModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\OLEdb.cs" />
+    <Compile Include="Classes\OLEdb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -217,7 +217,7 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Home\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
